replace django's default caching, please see https://blog.typodrive.com/2019/11/28/django-doesnt-work-out-of-the-box-with-multiple-gunicorn-uwsgi-workers-%f0%9f%a4%af/

--- a/requirements.in
+++ b/requirements.in
@@ -51,3 +51,6 @@ pytz # a db of timezones
 psycopg2-binary
 sentry-sdk
 python-dotenv # imprints `.env` file into the OS envs list
+
+# needed to replace django's default caching method - do not remove!
+python-memcached
