--- a/requirements.txt
+++ b/requirements.txt
@@ -116,3 +116,4 @@ yurl==1.0.0               # via aldryn-boilerplates
 
 # The following packages are considered to be unsafe in a requirements file:
 # setuptools==41.6.0        # via ipython
+python-memcached
