add some learnings from the ubs-ddj project, switch everything to use the docker-compose postgres db, remove support for sqlite

--- a/.env-example
+++ b/.env-example
@@ -1,10 +1,8 @@
 DJANGO_ENV=dev
 
-IS_DJANGO_DEBUG=true
+DJANGO_DEBUG=true
 
 DJANGO_ALLOWED_HOSTS="127.0.0.1 0.0.0.0 localhost 10.0.1.10"
-
-DJANGO_SECRET_KEY=sgikn@@uklsmdk8ynxm!lvxomkgxbbzbxjclz!=i-l0
 
 BASE_URL=localhost
 
@@ -18,7 +16,8 @@ EMAIL_USE_TLS=true
 
 TIME_ZONE_IDENTIFIER=Europe/Zurich
 
-DB_ENGINE="django.db.backends.sqlite3"
+# to work with docker-compose.yml
+DB_PORT=54320
 
 DJANGOCMS_GOOGLEMAP_API_KEY=123
 
