--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,31 @@
 version: '3'
 
 services:
-    web:
-        build: '.'
-        command:
-            - /bin/bash
-            - -c
-            - |
-                python manage.py migrate
-                python manage.py runserver 0.0.0.0:8000
-        volumes:
-            - .:/code
-        ports:
-            - '8000:8000'
+  web:
+    build: '.'
+    command:
+      - /bin/bash
+      - -c
+      - |
+        python manage.py migrate
+        python manage.py runserver 0.0.0.0:8000
+    volumes:
+      - .:/code
+    ports:
+      - '8000:8000'
+    environment:
+      # for docker-compose
+      DB_HOST: db
+      DB_PORT: 5432
+  db:
+    image: "postgres:11"
+    environment:
+      # these values correspond to the default values in backend/settings.py
+      POSTGRES_USER: db
+      POSTGRES_PASSWORD: db
+      POSTGRES_DB: db
+    ports:
+      # host:container
+      - "54320:5432"
+    volumes:
+      - ./.postgres-data:/var/lib/postgresql/data
