fix errors during startup

--- a/requirements.in
+++ b/requirements.in
@@ -1,3 +1,8 @@
+## HOW TO USE
+##
+## docker-compose run --rm web pip-compile requirements.in > requirements.txt
+##
+
 django-cms >= 3.7, < 3.8
 django < 2.2  # some of packages do not support yet 2.2 version
 
@@ -57,3 +62,6 @@ python-dotenv # imprints `.env` file into the OS envs list
 
 # needed to replace django's default caching method - do not remove!
 python-memcached
+
+# used to compile requirements.in to requirements.txt
+pip-tools
