--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
         "@types/jquery": "^3.3.29",
         "bootstrap": "^4.3.1",
             "popper.js": "^1.15.0", "//": "a peer depepndency of BS, for tooltips, might be useless",
-        "autoprefixer": "^9.5.1",  "//": "adds browser prefixes as `-webkit-` and `-moz-` automatically, might be useless"
+        "autoprefixer": "^9.5.1",  "//": "adds browser prefixes as `-webkit-` and `-moz-` automatically, might be useless",
+        "font-awesome": "~4.7.0"
     },
     "devDependencies": {
         "webpack-dev-server": "^3.8.2"
