--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,9 @@
-version: '3'
+version: '2'
 
 services:
     web:
         build: '.'
-        command:
-            - /bin/bash
-            - -c
-            - |
-                python manage.py migrate
-                python manage.py runserver 0.0.0.0:8000
+        command: python manage.py migrate && python manage.py runserver 0.0.0.0:8000
         volumes:
             - .:/code
         ports:
