--- a/requirements.txt
+++ b/requirements.txt
@@ -70,6 +70,7 @@ djangocms-text-ckeditor==3.8.0
 djangocms-video==2.1.1
 djangorestframework==3.10.3
 easy-thumbnails==2.6      # via django-filer, djangocms-picture
+django-image-cropping
 et-xmlfile==1.0.1         # via openpyxl
 html5lib==1.0.1           # via djangocms-text-ckeditor
 idna==2.8                 # via requests
